tests/fixtures/errors/invalid_timezone.gcl
// Error: invalid IANA timezone name
param t: Datetime = datetime("2024-01-01T12:00:00 UTC");
node display: Datetime = @t -> "Not/A_Timezone";
